--- a/mozilla/config/autoconf.mk.in
+++ b/mozilla/config/autoconf.mk.in
@@ -102,6 +102,10 @@ XPC_IDISPATCH_SUPPORT = @MOZ_ACTIVEX_SCRIPTING_SUPPORT@
 MOZ_JSLOADER = @MOZ_JSLOADER@
 MOZ_XPINSTALL = @MOZ_XPINSTALL@
 
+MOZ_DISK_CACHE = @MOZ_DISK_CACHE@
+MOZ_DNS_CACHE = @MOZ_DNS_CACHE@
+MOZ_PROTOCOLS  = @MOZ_PROTOCOLS@
+
 MOZ_COMPONENTS_VERSION_SCRIPT_LDFLAGS = @MOZ_COMPONENTS_VERSION_SCRIPT_LDFLAGS@
 MOZ_COMPONENT_NSPR_LIBS=@MOZ_COMPONENT_NSPR_LIBS@
 MOZ_COMPONENT_XPCOM_LIBS=@MOZ_COMPONENT_XPCOM_LIBS@
