--- a/mozilla/configure.in
+++ b/mozilla/configure.in
@@ -3561,6 +3561,53 @@ MOZ_ARG_ENABLE_BOOL(ldap-experimental,
     MOZ_LDAP_XPCOM_EXPERIMENTAL=1)
 
 dnl ========================================================
+dnl Disk cache on by default
+dnl ========================================================
+MOZ_DISK_CACHE=1
+MOZ_ARG_DISABLE_BOOL(disk-cache,
+[  --disable-disk-cache    Disable disk cache],
+    MOZ_DISK_CACHE= )
+
+dnl ========================================================
+dnl DNS cache on by default
+dnl ========================================================
+MOZ_DNS_CACHE=1
+MOZ_ARG_DISABLE_BOOL(dns-cache,
+[  --disable-dns-cache     Disable DNS cache],
+    MOZ_DNS_CACHE= )
+
+dnl ========================================================
+dnl Network protocols
+dnl ========================================================
+MOZ_PROTOCOLS_DEFAULT="about data file ftp gopher http jar keyword res viewsource"
+
+MOZ_ARG_ENABLE_STRING(protocols,
+[  --enable-protocols[={prot1,prot2,default,all,none}]
+                           Enable specific protocol handlers],
+[ for option in `echo $enableval | sed 's/,/ /g'`; do
+    if test "$option" = "yes" || test "$option" = "all"; then
+        MOZ_PROTOCOLS="$MOZ_PROTOCOLS $MOZ_PROTOCOLS_DEFAULT"
+    elif test "$option" = "no" || test "$option" = "none"; then
+        MOZ_PROTOCOLS=""
+    elif test "$option" = "default"; then
+        MOZ_PROTOCOLS="$MOZ_PROTOCOLS $MOZ_PROTOCOLS_DEFAULT"
+    elif test `echo "$option" | grep -c \^-` != 0; then
+        option=`echo $option | sed 's/^-//'`
+        MOZ_PROTOCOLS=`echo "$MOZ_PROTOCOLS" | sed "s/ ${option}//"`
+    else
+        MOZ_PROTOCOLS="$MOZ_PROTOCOLS $option"
+    fi
+done],
+    MOZ_PROTOCOLS="$MOZ_PROTOCOLS_DEFAULT")
+
+dnl Remove dupes
+if test -n "${_CYGWIN_PERL}"; then
+MOZ_PROTOCOLS=`${PERL} ${srcdir}/build/unix/uniq.pl ${MOZ_PROTOCOLS}`
+else
+MOZ_PROTOCOLS=`${CYGWIN_WRAPPER} ${PERL} ${srcdir}/build/unix/uniq.pl ${MOZ_PROTOCOLS}`
+fi
+
+dnl ========================================================
 dnl MathML on by default
 dnl ========================================================
 MOZ_MATHML=1
@@ -4748,6 +4795,9 @@ AC_SUBST(MOZ_INSURE_EXCLUDE_DIRS)
 AC_SUBST(MOZ_INSURIFYING)
 AC_SUBST(MOZ_LDAP_XPCOM)
 AC_SUBST(MOZ_LDAP_XPCOM_EXPERIMENTAL)
+AC_SUBST(MOZ_DISK_CACHE)
+AC_SUBST(MOZ_DNS_CACHE)
+AC_SUBST(MOZ_PROTOCOLS)
 AC_SUBST(LDAP_CFLAGS)
 AC_SUBST(LDAP_LIBS)
 AC_SUBST(LIBICONV)
