--- a/mozilla/netwerk/dns/src/Makefile.in
+++ b/mozilla/netwerk/dns/src/Makefile.in
@@ -41,6 +41,10 @@ CSRCS     = race.c  \
             nameprep.c \
             punycode.c
 
+ifdef MOZ_DNS_CACHE
+DEFINES += -DMOZ_DNS_CACHE
+endif
+
 # we don't want the shared lib, but we want to force the creation of a
 # static lib.
 FORCE_STATIC_LIB = 1
