--- a/mozilla/netwerk/protocol/about/Makefile.in
+++ b/mozilla/netwerk/protocol/about/Makefile.in
@@ -26,7 +26,7 @@ VPATH		= @srcdir@
 
 include $(DEPTH)/config/autoconf.mk
 
+# always build the about protocol handler (about:blank is required)
 DIRS		= public src
 
 include $(topsrcdir)/config/rules.mk
-
