--- a/mozilla/netwerk/protocol/gopher/Makefile.in
+++ b/mozilla/netwerk/protocol/gopher/Makefile.in
@@ -25,6 +25,6 @@ VPATH		= @srcdir@
 
 include $(DEPTH)/config/autoconf.mk
 
-DIRS		= src
+DIRS		= $(filter gopher,$(MOZ_PROTOCOLS))
 
 include $(topsrcdir)/config/rules.mk
