--- a/mozilla/netwerk/protocol/http/Makefile.in
+++ b/mozilla/netwerk/protocol/http/Makefile.in
@@ -28,7 +28,11 @@ VPATH		= @srcdir@
 
 include $(DEPTH)/config/autoconf.mk
 
-DIRS		= public src
+DIRS		= public
+
+ifeq ($(filter http,$(MOZ_PROTOCOLS)),http)
+DIRS += src
+endif
 
 include $(topsrcdir)/config/rules.mk
 
