--- a/mozilla/netwerk/protocol/keyword/Makefile.in
+++ b/mozilla/netwerk/protocol/keyword/Makefile.in
@@ -26,7 +26,7 @@ VPATH		= @srcdir@
 
 include $(DEPTH)/config/autoconf.mk
 
-DIRS		= src
+DIRS		= $(filter keyword,$(MOZ_PROTOCOLS))
 
 include $(topsrcdir)/config/rules.mk
 
