--- a/mozilla/netwerk/protocol/res/Makefile.in
+++ b/mozilla/netwerk/protocol/res/Makefile.in
@@ -26,7 +26,11 @@ VPATH		= @srcdir@
 
 include $(DEPTH)/config/autoconf.mk
 
-DIRS		= public src
+DIRS		= public
+
+ifeq ($(filter res,$(MOZ_PROTOCOLS)),res)
+DIRS += src
+endif
 
 include $(topsrcdir)/config/rules.mk
 
