--- a/mozilla/netwerk/protocol/gopher/Makefile.in
+++ b/mozilla/netwerk/protocol/gopher/Makefile.in
@@ -25,6 +25,8 @@ VPATH		= @srcdir@
 
 include $(DEPTH)/config/autoconf.mk
 
-DIRS		= $(filter gopher,$(MOZ_PROTOCOLS))
+ifeq ($(filter gopher,$(MOZ_PROTOCOLS)),gopher)
+DIRS = src
+endif
 
 include $(topsrcdir)/config/rules.mk
