--- a/mozilla/netwerk/protocol/keyword/Makefile.in
+++ b/mozilla/netwerk/protocol/keyword/Makefile.in
@@ -26,7 +26,9 @@ VPATH		= @srcdir@
 
 include $(DEPTH)/config/autoconf.mk
 
-DIRS		= $(filter keyword,$(MOZ_PROTOCOLS))
+ifeq ($(filter keyword,$(MOZ_PROTOCOLS)),keyword)
+DIRS = src
+endif
 
 include $(topsrcdir)/config/rules.mk
 
