--- a/mozilla/config/autoconf.mk.in
+++ b/mozilla/config/autoconf.mk.in
@@ -101,6 +101,7 @@ MOZ_ACTIVEX_SCRIPTING_SUPPORT = @MOZ_ACTIVEX_SCRIPTING_SUPPORT@
 XPC_IDISPATCH_SUPPORT = @MOZ_ACTIVEX_SCRIPTING_SUPPORT@
 MOZ_JSLOADER = @MOZ_JSLOADER@
 MOZ_XPINSTALL = @MOZ_XPINSTALL@
+MOZ_XPFE_COMPONENTS = @MOZ_XPFE_COMPONENTS@
 
 MOZ_DISK_CACHE = @MOZ_DISK_CACHE@
 MOZ_DNS_CACHE = @MOZ_DNS_CACHE@
